--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ configparser = "^5.0.2"
 daphne = {version = "^3.0.2", optional = true}
 uWSGI = {version = "^2.0.19", optional = true}
 django-cors-headers = "^3.7.0"
+Pillow = "^8.2.0"
 
 [tool.poetry.extras]
 mysql = ["mysqlclient"]
